@@ -1,2 +1,2 @@
 
-project.version=1.2.9-dev
+project.version=1.3.0
