@@ -2,6 +2,12 @@
 svenson json library change log:
 ================================
 
+Changes from 1.2.8 to 1.3.0:
+
+ * support for object factories implementing org.svenson.ObjectFactory<T>, which can be 
+ * support for parsing JSON from a stream. 
+ * large improvements on memory consumption. ( See http://fforw.de/post/Memory_consumption_changes_in_svenson_1.3/ )
+   
 Changes from 1.2.7 to 1.2.8:
 
  * embarassing failure to account for Beans as properties of other beans fixed. Thanks to Dave Bordoley for finding this.
